[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ring.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/plant.png" type="Texture" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="ring" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 90 )
scale = Vector2( 0.6, 0.6 )

[node name="Camera2D" type="Camera2D" parent="ring"]
scale = Vector2( 1.66667, 1.66667 )
current = true

[node name="player" type="Sprite" parent="."]
position = Vector2( 150, 91 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 2 )
hframes = 4

[node name="area" type="Area2D" parent="player"]

[node name="shape" type="CollisionShape2D" parent="player/area"]
shape = SubResource( 1 )

[node name="plant" type="Sprite" parent="."]
position = Vector2( 156, 93 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 3 )

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="watering_timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="input_event" from="player/area" to="." method="_on_player_area_input_event"]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="watering_timer" to="." method="_on_watering_timer_timeout"]
